--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,19 @@
 version: '3.9'
 
 services:
+  frontend:
+    container_name: client
+    image: frontend
+    build:
+      context: ./client
+      dockerfile: frontend.dockerfile
+    ports:
+      - "3000:3000"
+    environment:
+      - NEXT_PUBLIC_API_URL=http://localhost:4000
+    restart: always
+    depends_on:
+      - backend
   backend:
     container_name: server
     image: backend
