--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.8.0",
+    "@prisma/extension-accelerate": "^0.6.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
