--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/react": "^14.1.2",
+    "axios": "^1.6.5",
     "babel-plugin-macros": "^3.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3"
+    "react-hook-form": "^7.49.3",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
