--- a/server/package.json
+++ b/server/package.json
@@ -15,8 +15,11 @@
     "@prisma/extension-accelerate": "^0.6.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.8",
+    "nodemailer-express-handlebars": "^6.1.0",
     "prisma": "^5.8.0"
   },
   "devDependencies": {
