--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/react": "^14.1.2",
+    "axios": "^1.6.5",
     "babel-plugin-macros": "^3.1.0",
     "next": "14.0.4",
     "react": "^18",
