--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^14.1.2",
     "axios": "^1.6.5",
     "babel-plugin-macros": "^3.1.0",
+    "hamburger-react": "^2.5.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18.2.0",
