--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@hookform/resolvers": "^3.3.4",
     "@testing-library/react": "^14.1.2",
     "axios": "^1.6.5",
     "babel-plugin-macros": "^3.1.0",
@@ -24,7 +25,8 @@
     "react": "^18",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
