--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^3.3.4",
     "@testing-library/react": "^14.1.2",
+    "@typeform/embed-react": "^3.10.0",
     "axios": "^1.6.5",
     "babel-plugin-macros": "^3.1.0",
     "hamburger-react": "^2.5.0",
