--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@prisma/client": "^5.8.0",
     "@prisma/extension-accelerate": "^0.6.2",
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
